<resources>
    <string name="app_name">Tic-Tac-Toe</string>
    <string name="reset">Reset</string>
    <string name="tic_tac_toe">Tic - Tac - Toe</string>
    <string name="_1_player">1 PLAYER</string>
    <string name="_2_players">2 PLAYERS</string>
    <string name="exit">EXIT</string>
    <string name="play">Play</string>
    <string name="score">Score:</string>
    <string name="new_game">New Game</string>
    <string name="game">Game:</string>
    <string name="player_1">Player 1</string>
    <string name="computer">Computer</string>
    <string name="player_2">Player 2</string>
    <string name="help">Help</string>
    <string name="start">Start</string>
    <string name="info">info</string>
    <string name="you_lose">You Lose!</string>
    <string name="you_won">You won!</string>
    <string name="it_is_a_tie">It\'s a tie!</string>
    <string name="it_is_your_turn">It\'s your turn.</string>

</resources>
