<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="example.com.android.tic_tac_toe.FirstActivity">


    <ImageView
        android:id="@+id/image1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top"
        android:src="@drawable/image8"
        android:scaleType="centerCrop"
        />

    <ImageView
        android:id="@+id/image3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/image10"
        android:layout_below="@id/image1"
        android:scaleType="centerCrop"
        />
    <LinearLayout
        android:id="@+id/buttons"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="1dp"
        >
    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff9800"
        android:text="@string/_1_player"
        android:textStyle="bold"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="8dp"
        android:onClick="button1"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff9800"
        android:text="@string/_2_players"
        android:layout_marginLeft="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginStart="8dp"
        android:onClick="button2"/>

    <Button
        android:id="@+id/button3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#ff9800"
        android:text="@string/exit"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:onClick="EXIT"/>
    </LinearLayout>


    <ImageView
        android:id="@+id/image2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:src="@drawable/image10"
        android:scaleType="centerCrop"
        />



</RelativeLayout>
